css/style.css
:root
{
    background-color: hsla(252, 100%, 7%, 0.74);
    background: linear-gradient(70deg, hsla(252, 100%, 7%, 0.8), hsla(252, 100%, 7%, .9));
    font-family: 'Courier New', Courier, monospace;
    font-size: 3vmin;
    max-width: 100%;
    overflow-x: hidden;
}

body {
    margin: 0px;
}

nav {
    position: fixed;
    right: 0;
    z-index: 10;
    color: whitesmoke;
    text-shadow:1px 1px 10px rgb(0, 0, 0), 1px 1px 10px rgb(0, 0, 0);
    font-size: 4vmax;
    background-color: hsla(252, 100%, 7%, 0.5);
    font-weight: 700;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav ul li {
    text-align: right;
    border-bottom: 3px solid white;
}

.main {
    padding: 0;
}

a {
    color: rgb(255, 255, 255);
    text-decoration: none;
    transition-duration: 0.2s;
}

nav a:hover {
    color: hsl(350, 100%, 88%);
    text-decoration: underline;
    text-decoration-color: whitesmoke;
}

.p1 {
    font-size: 1em;
    padding: 5%;
}

.frontpage {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100vw;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
}

.headshot {
    opacity: 0.7;
    max-height: 100vh;
    max-width: 90vw;
    position: absolute;
    right: 0;
    bottom: 0;
}

.title {
    position: absolute;
    top: 20vmax;
    left: 10vmax;
    text-align: left;
    font-size: 6vmax;
    font-weight: bolder;
    color: whitesmoke;
    z-index: 5;
    text-shadow:1px 1px 10px rgb(0, 0, 0), 1px 1px 10px rgb(0, 0, 0);
}

.title1 {
    font-size: 3vmax;
    font-style: italic;
}

.intro {
    background-color: whitesmoke;
    margin: 0;
    margin-top: -3vmin;
    margin-bottom: -3vmin;
    text-align: justify;
}

.projectimg {
    width: 25vmax;
}

.container:hover {
    box-shadow: 0 8vmax 16vmax 0 rgba(0,0,0,0.2);
}

.projects {
    justify-content: center;
    align-items: center;
    display: flex;
    overflow: hidden;
}

.container {
    padding: 10px;
    margin: 3vmax;
    width: 25vmax;
    background-color: whitesmoke;
    text-align: center;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    display: inline-block;
}

.projecttitle {
    margin: 0;
}

.clickme {
    background-color: hsla(252, 100%, 7%, 0.8);
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 2vmin;
    transition-duration: 0.1s;
}

.clickme:hover {
    background-color: hsl(350, 100%, 88%);
    color: hsla(252, 100%, 7%, 0.8);
}


@media screen and (min-width: 644px)  {
    nav ul {
        text-align: center;
    }

    nav ul li {
        display: inline-block;
        border-bottom: 0px;
        border-left: 3px solid white;
        padding-left: 2vh;
    }
}

@media screen and (max-width: 900px)  {
    .p1 {
        padding: 10%;
    }
    .projects {
        display: grid;
        justify-content: center;
    }
    .container {
        width: 40vmax;
    }
    .projectimg {
        width: 40vmax;
    }
}

